--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,12 @@ android {
 }
 
 repositories {
-    maven { url 'https://kotlin.bintray.com/kotlinx' }
-    maven { url 'https://kotlin.bintray.com/ktor' }
+    jcenter()
     flatDir {
         dirs 'libs'
     }
-    jcenter()
+    maven { url 'https://kotlin.bintray.com/ktor' }
+    maven { url 'https://kotlin.bintray.com/kotlinx' }
 }
 
 dependencies {
@@ -53,22 +53,18 @@ dependencies {
     // android UI libraries
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.caverock:androidsvg:1.3'
     implementation 'com.google.android:flexbox:1.0.0'
+
+    // android support libraries
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // Map service libraries
     implementation 'org.osmdroid:osmdroid-android:6.0.2'   //osmdroid map engine
-//    implementation 'org.osmdroid:osmdroid-mapsforge:6.0.1@aar'
-    implementation(name: 'osmdroid-mapsforge-6.0.2-SNAPSHOT-debug', ext: 'aar')
-    implementation 'org.mapsforge:mapsforge-map:0.9.1'
-    implementation 'org.mapsforge:mapsforge-map-android:0.9.1'
-    implementation 'org.mapsforge:mapsforge-themes:0.9.1'
     implementation 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
-
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
 
     // glide library for imageview
     implementation 'com.github.bumptech.glide:glide:4.8.0'
@@ -78,8 +74,8 @@ dependencies {
     // kotlin JSON
     implementation 'com.beust:klaxon:3.0.1'
 
-    // svg support
-    implementation 'com.caverock:androidsvg:1.3'
+    // Diary animation
+    implementation 'at.wirecube:additive_animations:1.6.2'
 
     // Test libraries
 
@@ -101,8 +97,6 @@ dependencies {
     // Android test
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    implementation 'at.wirecube:additive_animations:1.6.2'
 }
 
 kotlin {
