--- a/landmarks-clientkt/build.gradle
+++ b/landmarks-clientkt/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
-    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.2.71'
-    ext.ktor_version ='0.9.5'
+    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.3.0'
+    ext.ktor_version ='1.0.0-beta-4'
     repositories {
         jcenter()
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-dev/' }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -22,16 +23,18 @@ repositories {
     jcenter()
     maven { url 'https://dl.bintray.com/kotlin/ktor/' }
     maven { url 'https://dl.bintray.com/kotlin/kotlinx/'}
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-dev/' }
 }
 
 dependencies {
     // Kotlin standard library
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.30.2"
-
-    implementation files('libs/ktor-client-okhttp-0.9.5-custom.jar')
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
+    implementation "io.ktor:ktor-client-core:$ktor_version"
+    implementation "io.ktor:ktor-client-okhttp:$ktor_version"
+    implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
+    implementation "io.ktor:ktor-client-gson:$ktor_version"
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
 
     // JSON
     implementation 'com.beust:klaxon:3.0.1'
@@ -63,11 +66,6 @@ test {
     }
 }
 
-kotlin {
-    experimental {
-        coroutines 'enable'
-    }
-}
 compileKotlin {
     kotlinOptions.jvmTarget = '1.8'
 }
