--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/*.kotlin_module'
     }
 }
 
@@ -63,7 +64,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // Map service libraries
-    implementation 'org.osmdroid:osmdroid-android:6.0.2'   //osmdroid map engine
+    implementation 'org.osmdroid:osmdroid-android:6.0.3'   //osmdroid map engine
     implementation 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
 
     // glide library for imageview
@@ -80,10 +81,10 @@ dependencies {
     // Test libraries
 
     // JUnit 5 -> 4 test framework
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.2.0'
-    testCompileOnly 'org.junit.platform:junit-platform-runner:1.2.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.3.2'
+    testCompileOnly 'org.junit.platform:junit-platform-runner:1.3.2'
     // For java junit4 compatible test discovery
-    testCompileOnly 'org.junit.vintage:junit-vintage-engine:5.2.0'
+    testCompileOnly 'org.junit.vintage:junit-vintage-engine:5.3.2'
     // Spek, the kotlin test framework, with kotlin version replacement.
     testCompileOnly('org.jetbrains.spek:spek-api:1.1.5') {
         exclude group: 'org.jetbrains.kotlin'
