--- a/landmarks-clientkt/build.gradle
+++ b/landmarks-clientkt/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.3.0'
-    ext.ktor_version ='1.0.0-beta-4'
+    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.3.20'
+    ext.ktor_version ='1.1.2'
     repositories {
         jcenter()
         maven { url 'https://dl.bintray.com/kotlin/kotlin-dev/' }
@@ -14,11 +14,6 @@ buildscript {
 apply plugin: 'idea'
 apply plugin: 'kotlin'
 
-jar {
-    baseName = 'landmarks-clientkt'
-    version = '0.1'
-}
-
 repositories {
     jcenter()
     maven { url 'https://dl.bintray.com/kotlin/ktor/' }
@@ -29,19 +24,19 @@ repositories {
 dependencies {
     // Kotlin standard library
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-okhttp:$ktor_version"
     implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
     implementation "io.ktor:ktor-client-gson:$ktor_version"
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
     // JSON
     implementation 'com.beust:klaxon:3.0.1'
 
     // JUnit 5 test framework
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.2.0'
-    testCompileOnly 'org.junit.platform:junit-platform-runner:1.2.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.3.2'
+    testCompileOnly 'org.junit.platform:junit-platform-runner:1.3.2'
 
     // Spek, the kotlin test framework, with kotlin version replacement.
     testCompileOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
