--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -58,10 +58,10 @@ dependencies {
     implementation 'com.google.android:flexbox:1.0.0'
 
     // android support libraries
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Map service libraries
     implementation 'org.osmdroid:osmdroid-android:6.0.3'   //osmdroid map engine
@@ -69,7 +69,7 @@ dependencies {
 
     // glide library for imageview
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    kapt 'android.arch.lifecycle:compiler:1.1.1'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.1.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
 
     // kotlin JSON
@@ -96,6 +96,6 @@ dependencies {
     // Assertion framework
     testImplementation 'org.amshove.kluent:kluent:1.38'
     // Android test
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
