--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <activity android:name=".diary.Diary_newDiary" />
 
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="{package_name}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
