--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ repositories {
     }
     maven { url 'https://kotlin.bintray.com/ktor' }
     maven { url 'https://kotlin.bintray.com/kotlinx' }
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap/' }
 }
 
 dependencies {
@@ -54,48 +55,48 @@ dependencies {
     // android UI libraries
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
-    implementation 'com.caverock:androidsvg:1.3'
-    implementation 'com.google.android:flexbox:1.0.0'
+    implementation 'com.caverock:androidsvg:1.4'
+    implementation 'com.google.android:flexbox:1.1.1'
 
     // android support libraries
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
 
     // Map service libraries
-    implementation 'org.osmdroid:osmdroid-android:6.0.3'   //osmdroid map engine
-    implementation 'com.drewnoakes:metadata-extractor:2.11.0' //metadata-extractor
+    implementation 'org.osmdroid:osmdroid-android:6.1.2'   //osmdroid map engine
+    implementation 'com.drewnoakes:metadata-extractor:2.12.0' //metadata-extractor
 
     // glide library for imageview
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'androidx.lifecycle:lifecycle-compiler:2.1.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.10.0'
 
     // kotlin JSON
-    implementation 'com.beust:klaxon:3.0.1'
+    implementation 'com.beust:klaxon:5.2'
 
     // Diary animation
-    implementation 'at.wirecube:additive_animations:1.6.2'
+    implementation 'at.wirecube:additive_animations:1.7.4'
 
     // Test libraries
 
     // JUnit 5 -> 4 test framework
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.3.2'
-    testCompileOnly 'org.junit.platform:junit-platform-runner:1.3.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.5.2'
+    testCompileOnly 'org.junit.platform:junit-platform-runner:1.5.2'
     // For java junit4 compatible test discovery
-    testCompileOnly 'org.junit.vintage:junit-vintage-engine:5.3.2'
+    testCompileOnly 'org.junit.vintage:junit-vintage-engine:5.5.2'
     // Spek, the kotlin test framework, with kotlin version replacement.
-    testCompileOnly('org.jetbrains.spek:spek-api:1.1.5') {
+    testCompileOnly('org.jetbrains.spek:spek-api:1.2.1') {
         exclude group: 'org.jetbrains.kotlin'
     }
-    testImplementation('org.jetbrains.spek:spek-junit-platform-engine:1.1.5') {
+    testImplementation('org.jetbrains.spek:spek-junit-platform-engine:1.2.1') {
         exclude group: 'org.junit.platform'
         exclude group: 'org.jetbrains.kotlin'
     }
     // Assertion framework
-    testImplementation 'org.amshove.kluent:kluent:1.38'
+    testImplementation 'org.amshove.kluent:kluent:1.56'
     // Android test
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
