--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.20'
-    ext.coroutine_version = '1.1.1'
+    ext.kotlin_version = '1.3.60-eap-25'
+    ext.coroutine_version = '1.3.2'
     ext.anko_version = '0.10.8'
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap/' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0-alpha01'
@@ -15,6 +17,10 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id "com.github.ben-manes.versions" version "0.27.0"
 }
 
 allprojects {
