--- a/landmarks-clientkt/build.gradle
+++ b/landmarks-clientkt/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.3.20'
+    ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.3.60-eap-25'
     ext.ktor_version ='1.1.2'
     repositories {
         jcenter()
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:5.1.0'
     }
 }
 
@@ -24,32 +24,32 @@ repositories {
 dependencies {
     // Kotlin standard library
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-okhttp:$ktor_version"
     implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
     implementation "io.ktor:ktor-client-gson:$ktor_version"
-    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
 
     // JSON
-    implementation 'com.beust:klaxon:3.0.1'
+    implementation 'com.beust:klaxon:5.2'
 
     // JUnit 5 test framework
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.3.2'
-    testCompileOnly 'org.junit.platform:junit-platform-runner:1.3.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.5.2'
+    testCompileOnly 'org.junit.platform:junit-platform-runner:1.5.2'
 
     // Spek, the kotlin test framework, with kotlin version replacement.
     testCompileOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    testCompileOnly('org.jetbrains.spek:spek-api:1.1.5') {
+    testCompileOnly('org.jetbrains.spek:spek-api:1.2.1') {
         exclude group: 'org.jetbrains.kotlin'
     }
-    testRuntimeOnly('org.jetbrains.spek:spek-junit-platform-engine:1.1.5') {
+    testRuntimeOnly('org.jetbrains.spek:spek-junit-platform-engine:1.2.1') {
         exclude group: 'org.junit.platform'
         exclude group: 'org.jetbrains.kotlin'
     }
 
     // Assertion framework
-    testImplementation 'org.amshove.kluent:kluent:1.38'
+    testImplementation 'org.amshove.kluent:kluent:1.56'
 
     // Proxy test
     testImplementation "io.ktor:ktor-client-apache:$ktor_version"
