--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_landmark_round"
         android:supportsRtl="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".diary.Diary_newImage"></activity>
+        <activity android:name=".diary.Diary_newImage" />
         <activity
             android:name=".album.GalleryActivity"
             android:noHistory="true" />
