--- a/landmarks-clientkt/build.gradle
+++ b/landmarks-clientkt/build.gradle
@@ -1,18 +1,20 @@
 buildscript {
     ext.kotlin_version = rootProject.ext.properties.kotlin_version ?: '1.3.60-eap-25'
-    ext.ktor_version ='1.1.2'
+    ext.ktor_version ='1.2.5'
     repositories {
         jcenter()
         maven { url 'https://dl.bintray.com/kotlin/kotlin-dev/' }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
         classpath 'com.github.jengelman.gradle.plugins:shadow:5.1.0'
     }
 }
 
 apply plugin: 'idea'
 apply plugin: 'kotlin'
+apply plugin: 'kotlinx-serialization'
 
 repositories {
     jcenter()
@@ -25,9 +27,11 @@ dependencies {
     // Kotlin standard library
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.13.0"
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-okhttp:$ktor_version"
     implementation "io.ktor:ktor-client-json-jvm:$ktor_version"
+    implementation "io.ktor:ktor-client-serialization-jvm:$ktor_version"
     implementation "io.ktor:ktor-client-gson:$ktor_version"
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
 
